# gre-3000-offline

./: .gitignore  README.md  main.py  pyproject.toml  pysidedeploy.spec
.superpowers/sdd/: final-fix-app-report.md  final-fix-importer-report.md  task-11-report.md
outputs/: 使用说明.txt
resources/: 使用说明.txt
scripts/: build_click_dictionary.py  build_release.ps1  export_web_data.py  generate_icon.py  generate_web_icons.py  publish_release_set.py  unicode_launcher.py  verify_release_artifacts.py  windows_release_probe.py
src/gre_vocab_app/: __main__.py  bootstrap.py  controller.py  domain.py  paths.py  progress_transfer.py
tests/: conftest.py  test_bootstrap.py  test_controller.py  test_domain.py  test_export_web_data.py  test_main.py  test_packaged_paths.py  test_paths.py  test_progress_transfer.py  test_publish_release_set.py  test_release_documentation.py  test_release_pipeline.py  test_unicode_launcher.py  test_windows_release_probe.py
tests/db/: test_content.py  test_user.py
tests/importer/: test_audit.py  test_build.py  test_layout.py  test_normalize.py  test_real_integrity.py  test_reference_sources.py
tests/services/: test_cloud_sync.py  test_dictionary.py  test_relations.py  test_search.py  test_speech.py  test_study.py  test_translation.py
tests/ui/: test_favorites_page.py  test_home_page.py  test_lookup_label.py  test_main_window.py  test_settings_dialog.py  test_study_page.py  test_word_detail.py  test_word_list_page.py
web/: README.md  package-lock.json  package.json
web/.openai/: hosting.json
web/app/: globals.css  layout.tsx  page.tsx  (+1 more)
(+49 files in other folders)
